# RAG_Chatbot

./: ACCESS_INFO.md  API_ERROR_HANDLING.md  CHATGPT_UI_UPDATE.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  DOCUMENT_UPLOAD_GUIDE.md  ERROR_FIX_GUIDE.md  FINAL_SUMMARY.md  GEMINI_MIGRATION_COMPLETE.md  HUGGINGFACE_SETUP.md  IMPLEMENTATION_COMPLETE.md  QUICK_FIX.md  QUICK_START.md  README.md  README_FINAL.md  READY_TO_TEST.md  RESTART_FRONTEND.md  SYSTEM_STATUS.md
.claude/: QUICKSTART.md  RAG_ARCHITECTURE_GUIDE.md  README.md  ROADMAP.md  SUMMARY.md  settings.json  settings.local.json
.claude/agents/: backend-dev.md  devops-engineer.md  docs-writer.md  frontend-dev.md  fullstack-integrator.md  rag-architect.md  test-engineer.md
.claude/skills/: code-reviewer.md  database-specialist.md  debug-helper.md  performance-optimizer.md  security-auditor.md  ui-ux-designer.md
.claude/templates/: cicd.md  docker.md  fastapi-endpoint.md  nextjs-component.md  rag-implementation.md  testing.md
backend/: MIGRATION_SUMMARY.md  main.py  pyproject.toml  restart.sh
backend/core/: config.py  database.py  dependencies.py
backend/models/: chat.py  chat_simple.py  document.py
backend/routers/: chat.py  chat_simple.py  documents.py  documents_simple.py  health.py
backend/services/conversation/: memory.py  query_rewriter.py
backend/services/rag/: chunking.py  embeddings.py  embeddings_hf.py  pipeline.py  pipeline_hf.py  retrieval.py  vector_store.py
backend/storage/chroma_db/: chroma.sqlite3
frontend/: package-lock.json
frontend/app/: page.tsx
(+12 files in other folders)
