[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "chromadb>=0.4.22",
    "google-genai>=0.2.0",
    "tiktoken>=0.5.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]
